feat: add add budget page and related stuff

--- a/src/app/common/layout/sidebar.html
+++ b/src/app/common/layout/sidebar.html
@@ -2,5 +2,6 @@
     <ul class="nav nav-sidebar">
         <li><a ui-sref="app.dashboard" ui-sref-active="active">Dashboard <span class="sr-only">(current)</span></a></li>
         <li><a ui-sref="app.accounts" ui-sref-active="active">Accounts</a></li>
+        <li><a ui-sref="app.budgetAdd" ui-sref-active="active">Add Budget</a></li>
     </ul>
 </div>
