fix: fix key name for month

--- a/src/app/components/budget/add.html
+++ b/src/app/components/budget/add.html
@@ -23,7 +23,7 @@
         </div>
         <div class="col-sm-10">
             <input type="text"
-                   ng-model="$ctrl.budget.time">
+                   ng-model="$ctrl.budget.month">
         </div>
     </div>
 
