feat: add add budget page

--- a/src/app/common/layout/sidebar.html
+++ b/src/app/common/layout/sidebar.html
@@ -1,7 +1,22 @@
 <div class="col-sm-3 col-md-2 sidebar">
-    <ul class="nav nav-sidebar">
-        <li><a ui-sref="app.dashboard" ui-sref-active="active">Dashboard <span class="sr-only">(current)</span></a></li>
-        <li><a ui-sref="app.accounts" ui-sref-active="active">Accounts</a></li>
-        <li><a ui-sref="app.budgetAdd" ui-sref-active="active">Add Budget</a></li>
-    </ul>
+  <ul class="nav nav-sidebar">
+    <li>
+      <a ui-sref="app.dashboard"
+         ui-sref-active="active">Dashboard
+        <span class="sr-only">(current)</span>
+      </a>
+    </li>
+    <li>
+      <a ui-sref="app.accounts"
+         ui-sref-active="active">Accounts</a>
+    </li>
+    <li>
+      <a ui-sref="app.budgetAdd"
+         ui-sref-active="active">Add Budget</a>
+    </li>
+    <li>
+      <a ui-sref="app.budgetGet"
+         ui-sref-active="active">Get Budget</a>
+    </li>
+  </ul>
 </div>
