--- a/src/app/common/layout/sidebar.html
+++ b/src/app/common/layout/sidebar.html
@@ -3,5 +3,6 @@
         <li><a ui-sref="app.dashboard" ui-sref-active="active">Dashboard <span class="sr-only">(current)</span></a></li>
         <li><a ui-sref="app.accounts" ui-sref-active="active">Accounts</a></li>
         <li><a ui-sref="app.budgetAdd" ui-sref-active="active">Add Budget</a></li>
+        <li><a ui-sref="app.grammarModuleAdd" ui-sref-active="active">get Budget</a></li>
     </ul>
 </div>
