--- a/src/app/components/budget/add.html
+++ b/src/app/components/budget/add.html
@@ -13,7 +13,7 @@
             <label for="">Amount</label>
         </div>
         <div class="col-sm-10">
-            <input type="text"
+            <input type="text" name="amount"
                    ng-model="$ctrl.budget.amount">
         </div>
     </div>
@@ -22,7 +22,7 @@
             <label for="">Date</label>
         </div>
         <div class="col-sm-10">
-            <input type="text"
+            <input type="text" name="month"
                    ng-model="$ctrl.budget.month">
         </div>
     </div>
